--- a/.env
+++ b/.env
@@ -21,7 +21,7 @@ APP_SECRET=06680d4071a7979e4d96e4bf03dff6bd
 ###< symfony/framework-bundle ###
 
 ###> symfony/mailer ###
-# MAILER_DSN=smtp://localhost
+MAILER_DSN=smtp://localhost
 ###< symfony/mailer ###
 
 ###> doctrine/doctrine-bundle ###
@@ -29,5 +29,12 @@ APP_SECRET=06680d4071a7979e4d96e4bf03dff6bd
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # For a MySQL database, use: "mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7"
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
-DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&charset=utf8"
+DATABASE_URL="mysql://root@127.0.0.1:3306/projetannonces?serverVersion=5.7"
 ###< doctrine/doctrine-bundle ###
+
+###> symfony/swiftmailer-bundle ###
+# For Gmail as a transport, use: "gmail://username:password@localhost"
+# For a generic SMTP server, use: "smtp://localhost:25?encryption=&auth_mode="
+# Delivery is disabled by default via "null://localhost"
+MAILER_URL=gmail://besnard.arno:P4ul1n314@localhost
+###< symfony/swiftmailer-bundle ###
